--- a/result.html
+++ b/result.html
@@ -2,13 +2,15 @@
 <html> 
 <head> 
     <meta charset="UTF-8"> 
-    <link rel="stylesheet" href="{{ url_for('static', filename='style_quiz.css') }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css4.css') }}"> 
     <title>Викторина</title> 
 </head> 
 <body> 
     <form method='POST' action='/'> 
         <h1>Вы набрали {{a}} /5 баллов</h1> 
-            
+        <div>
+            <button type="submit", name = "quiz">Отправить</button>
+        </div>       
     </form> 
 </body> 
 </html>
